Updated to include new notes

--- a/toc.ipynb
+++ b/toc.ipynb
@@ -14,7 +14,28 @@
     "    * [Maps](./java/maps.ipynb#notebook_id)\n",
     "    * [Implementing a simple list class](./java/implementing_a_simple_list_class.ipynb#notebook_id)\n",
     "    * [Implementing a simple generic list class](./java/implementing_a_simple_generic_class.ipynb#notebook_id)\n",
-    "    * [Implementing a generic list class that has no fixed size](./java/implementing_a_resizable_list.ipynb#notebook_id)"
+    "    * [Implementing a generic list class that has no fixed size](./java/implementing_a_resizable_list.ipynb#notebook_id)\n",
+    "* Stacks\n",
+    "    * [Description](./stack/description.ipynb#notebook_id)\n",
+    "    * [Interface](./stack/interface.ipynb#notebook_id)\n",
+    "    * [How not to use inheritance to implement a stack](./stack/how_not_to_use_inheritance_to_implement_a_stack.ipynb#notebook_id)\n",
+    "    * [List-based stack](./stack/list_based_stack.ipynb#notebook_id)\n",
+    "    * [Array-based fixed size stack](./stack/array_based_fixed_size_stack.ipynb#notebook_id)\n",
+    "    * [Array-based stack](./stack/array_based_stack.ipynb#notebook_id)\n",
+    "    * [Implementing linked structures](./stack/implementing_linked_structures.ipynb#notebook_id)\n",
+    "    * [Linked node-based stack](./stack/link_based_stack.ipynb#notebook_id)\n",
+    "* Computational complexity\n",
+    "    * [Introduction and big-O](./complexity/introduction.ipynb#notebook_id)\n",
+    "    * [Big-Omega notation](./complexity/omega-notation.ipynb#notebook_id)\n",
+    "    * [Big-Theta notation](./complexity/theta-notation.ipynb#notebook_id)\n",
+    "* Singly linked lists\n",
+    "    * [Description](./linkedlist/description.ipynb#notebook_id)\n",
+    "    * [Adding an element](./linkedlist/adding_an_element.ipynb#notebook_id)\n",
+    "    * [Moving to a node](./linkedlist/moving_to_a_node.ipynb#notebook_id)\n",
+    "    * [Getting and setting an element](./linkedlist/getting_and_setting_an_element.ipynb#notebook_id)\n",
+    "    * [Inserting an element](./linkedlist/inserting_an_element.ipynb#notebook_id)\n",
+    "    * [Removing an element](./linkedlist/removing_an_element.ipynb#notebook_id)\n",
+    "    * [Addititional exercises](./linkedlist/additional_exercises.ipynb#notebook_id)"
    ]
   },
   {
