Added binary search tree notebooks.

--- a/trees/exercise_solutions.ipynb
+++ b/trees/exercise_solutions.ipynb
@@ -48,6 +48,7 @@
     "## A class for binary tree nodes\n",
     "\n",
     "1.\n",
+    "\n",
     "    1. Removes the left subtree of $n$.\n",
     "    2. Removes the right subtree of $n$.\n",
     "    3. `return !this.hasLeft() && !this.hasRight();`\n",
@@ -74,8 +75,86 @@
     "\n",
     "4. See the `BinaryNode.java` class [here](../resources/src/ca/queensu/cs/cisc235/tree/BinaryNode.java).\n",
     "\n",
-    "5. See the `BinaryNode.java` class [here](../resources/src/ca/queensu/cs/cisc235/tree/BinaryNode.java)."
+    "5. See the `BinaryNode.java` class [here](../resources/src/ca/queensu/cs/cisc235/tree/BinaryNode.java).\n",
+    "\n",
+    "## Binary search trees\n",
+    "\n",
+    "1. 74 and 76 are less than 83 and are in the left subtree of 83. 93 is greater than 83 and is in the right subtree of 83. 76 is greater than 74 and is the right subtree of 74.\n",
+    "\n",
+    "2. True.\n",
+    "\n",
+    "3. The maximum element in a BST is the rightmost node of the tree.\n",
+    "\n",
+    "  **Proof** (by contradiction) Assume that the maximum value is not stored in the rightmost node of the tree. Then the maximum   value must be in a left subtree of some node $m$. This is a contradiction because every value in the left subtree is less than or equal to the value in node $m$ by the binary search tree property. If the value is less than the value in node $m$ then it is not the maximum value in the tree and the assumption is false. If the value is equal to the value in node $m$ then $m$ is the rightmost node of the tree and the assumption is false.\n",
+    "  \n",
+    "4. Change every occurrence of `min` to `max`, every occurrence of `hasLeft` to `hasRight`, and every occurrence of `left` to `right` in the `min` algorithms\n",
+    "\n",
+    "5. To get element:\n",
+    "  * 8: less than 50, recursively search left subtree, less than 27, recursively search left subtree, equal to  8\n",
+    "  * 76: greater than 50, recursively search right subtree, greater than 73, recursively search right subtree, less than 83, recursively search left subtree, greater than 74, recursively search right subtree, equal to 76\n",
+    "  * 55: greater than 50, recursively search right subtree, less than 73, recursively search left subtree, greater than 51, recursively search right subtree, not in tree\n",
+    "  \n",
+    "6. right child of 51\n",
+    "\n",
+    "7. left child of 8\n",
+    "\n",
+    "8. right child of 44\n",
+    "\n",
+    "9. a linked list with 1 at the root and each remaining element the right child of the previous element\n",
+    "\n",
+    "10. a linked list with 5 at the root and each remaining element the left child of the previous element\n",
+    "\n",
+    "11. $n$ has an inorder predecessor in the subtree rooted at $n$ if $n$ has a left child. $n$ has an inorder successor in the subtree rooted at $n$ if $n$ has a right child. \n",
+    "\n",
+    "12. \n",
+    "   ```\n",
+    "   inorderSuccessor(BinaryNode n) {\n",
+    "       if (n.hasRight()) {\n",
+    "           return min(n.right)\n",
+    "       }\n",
+    "       else {\n",
+    "           return null                   // n has no predecessor\n",
+    "       }\n",
+    "   }\n",
+    "   ```\n",
+    "   \n",
+    "13. Set `this.root` to `null`\n",
+    "\n",
+    "14. $m$ is the root of a BST. Left $p$ be the parent node of $n$. If $n$ is the left child of $p$ then all of the values in $m$ are less than or equal to the element in $p$; thus replacing $n$ with $m$ preserves the BST property. If $n$ is the right child of $p$ then all of the values in $m$ are greater than the element in $p$; thus replacing $n$ with $m$ preserves the BST property.\n",
+    "\n",
+    "15. The inorder predecessor is greater than or equal to all other elements in the left subtree of $n$; thus replacing $n$ with its inorder predecessor preserves the BST property for the left subtree of $n$. The inorder predecessor is lest than all other elements in the right subtree of $n$; thus replacing $n$ with its inorder predecessor preserves the BST property for the right subtree of $n$. \n",
+    "\n",
+    "16. Similar to 15.\n",
+    "\n",
+    "17. No, because the root node is not replaced (only the element of the root node is replaced).\n",
+    "\n",
+    "18. The inorder predecessor/successor has at most one child and removing a node having 0 or 1 child is easier than removing a node with 2 children.\n",
+    "\n",
+    "19. Move element 44 to the root node and remove the leaf node 44.\n",
+    "\n",
+    "20. In the best case, the $i + 1$'th element is inserted into a tree of height $\\log \\lfloor{i} \\rfloor$ where $\\lfloor{i} \\rfloor$ is the floor of $i$. We need to do this $n$ times so the timing function is proportional to \n",
+    "\n",
+    "  $$\\sum_{i = 1}^{n} \\log \\lfloor{i} \\rfloor < \\sum_{i = 1}^{n} \\log i = \\log n!$$\n",
+    "  \n",
+    "  which is an element of $O(n \\log n)$ by Stirling's approximation. The traversal is $O(n)$; thus the overall complexity is $O(n \\log n) + O(n)$ which is $O(n \\log n)$.\n",
+    "\n",
+    "  In the worst case, the $i + 1$'th element is inserted into a tree of height $i$. We need to do this $n$ times so the timing function is proportional to \n",
+    "\n",
+    "  $$\\sum_{i = 1}^{n} i = n(n + 1) / 2$$\n",
+    "  \n",
+    "  which is an element of $O(n^2)$. The traversal is $O(n)$; thus the overall complexity is $O(n^2) + O(n)$ which is $O(n^2)$.\n",
+    "  \n",
+    "## Binary search tree implementation\n",
+    "\n",
+    "1. The complete solution is not given but the inorder predecessor/successor of a node $n$ is either the inorder predecessor/successor of the subtree rooted at $n$ or an ancestor of $n$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
