Updated table of contents

--- a/toc.ipynb
+++ b/toc.ipynb
@@ -43,6 +43,7 @@
     "        * [Node class](./trees/binary_node.ipynb#notebook_id)\n",
     "        * [Random binary tree](./trees/random_binary_tree.ipynb#notebook_id)\n",
     "        * [Traversal algorithms](./trees/traversals.ipynb#notebook_id)\n",
+    "        * [Binary search trees](./trees/binary_search_trees.ipyu\n",
     "        * [Exercise solutions](./trees/exercise_solutions.ipynb#notebook_id)"
    ]
   },
