--- a/toc.ipynb
+++ b/toc.ipynb
@@ -43,7 +43,8 @@
     "        * [Node class](./trees/binary_node.ipynb#notebook_id)\n",
     "        * [Random binary tree](./trees/random_binary_tree.ipynb#notebook_id)\n",
     "        * [Traversal algorithms](./trees/traversals.ipynb#notebook_id)\n",
-    "        * [Binary search trees](./trees/binary_search_trees.ipyu\n",
+    "        * [Binary search trees](./trees/binary_search_trees.ipynb#notebook_id)\n",
+    "        * [Binary search tree implementation](./trees/bst_implementation.ipynb#notebook_id)\n",
     "        * [Exercise solutions](./trees/exercise_solutions.ipynb#notebook_id)"
    ]
   },
