--- a/trees/binary_search_trees.ipynb
+++ b/trees/binary_search_trees.ipynb
@@ -23,7 +23,7 @@
     "1. the left subtree of $t$ is a BST where all elements are *less than or equal to* the element in $n$\n",
     "2. the right subtree of $t$ is a BST where all elements are *greater than* the element in $n$\n",
     "\n",
-    "![Binary search tree](../resources/images/bst-2/Slide3.png)\n",
+    "![Binary search tree](../resources/images/bst-2/Slide3.PNG)\n",
     "\n",
     "The reader can easily verify that every node in the left subtree of node 50 contains an element less than 50 and every node in the right subtree of node 50 contains an element greater than 50.\n",
     "\n",
