Updated table of contents to include red-black trees

--- a/toc.ipynb
+++ b/toc.ipynb
@@ -45,7 +45,8 @@
     "        * [Traversal algorithms](./trees/traversals.ipynb#notebook_id)\n",
     "        * [Binary search trees](./trees/binary_search_trees.ipynb#notebook_id)\n",
     "        * [Binary search tree implementation](./trees/bst_implementation.ipynb#notebook_id)\n",
-    "        * [Exercise solutions](./trees/exercise_solutions.ipynb#notebook_id)"
+    "        * [Exercise solutions](./trees/exercise_solutions.ipynb#notebook_id)\n",
+    "    * [Red-black, 2-3, and left-leaning red-black trees](./trees/red-black.ipynb#notebook_id)"
    ]
   },
   {
