Updated toc with priority queue notebooks

--- a/toc.ipynb
+++ b/toc.ipynb
@@ -46,7 +46,11 @@
     "        * [Binary search trees](./trees/binary_search_trees.ipynb#notebook_id)\n",
     "        * [Binary search tree implementation](./trees/bst_implementation.ipynb#notebook_id)\n",
     "        * [Exercise solutions](./trees/exercise_solutions.ipynb#notebook_id)\n",
-    "    * [Red-black, 2-3, and left-leaning red-black trees](./trees/red-black.ipynb#notebook_id)"
+    "    * [Red-black, 2-3, and left-leaning red-black trees](./trees/red-black.ipynb#notebook_id)\n",
+    "* Priority queues\n",
+    "    * [Description](./pq/description.ipynb#notebook_id)\n",
+    "    * [Heaps](./pq/heaps.ipynb#notebook_id)\n",
+    "    * [Heap-based priority queue](./pq/implementation.ipynb#notebook_id)"
    ]
   },
   {
