--- a/toc.ipynb
+++ b/toc.ipynb
@@ -50,7 +50,12 @@
     "* Priority queues\n",
     "    * [Description](./pq/description.ipynb#notebook_id)\n",
     "    * [Heaps](./pq/heaps.ipynb#notebook_id)\n",
-    "    * [Heap-based priority queue](./pq/implementation.ipynb#notebook_id)"
+    "    * [Heap-based priority queue](./pq/implementation.ipynb#notebook_id)\n",
+    "* Hash tables\n",
+    "    * [Description](./hashing/introduction.ipynb#notebook_id)\n",
+    "    * [Hash functions](./hashing/hash_functions.ipynb#notebook_id)\n",
+    "    * [Collision resolution: Chaining](./hashing/collision_resolution_chaining.ipynb#notebook_id)\n",
+    "    * [Collision resolution: Open addressing](./hashing/collision_resolution_open_addressing.ipynb#notebook_id)"
    ]
   },
   {
